--- a/packages/netlify-cms-widget-components/package.json
+++ b/packages/netlify-cms-widget-components/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "react-sortable-hoc": "^0.8.3"
+    "react-sortable-hoc": "^0.8.3",
+    "uuid": "^3.3.2"
   }
 }
