Autosizing for textarea

--- a/packages/netlify-cms-widget-components/package.json
+++ b/packages/netlify-cms-widget-components/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "react-sortable-hoc": "^0.8.3",
+    "react-textarea-autosize": "^7.0.4",
     "uuid": "^3.3.2"
   }
 }
