--- a/packages/netlify-cms-widget-components/package.json
+++ b/packages/netlify-cms-widget-components/package.json
@@ -26,6 +26,6 @@
     "regenerator-runtime": "^0.12.0"
   },
   "scripts": {
-    "test": "jest --config=jest.config.js"
+    "test": "DEBUG=0 jest --config=jest.config.js"
   }
 }
