Renames components widget to mdx

--- a/packages/netlify-cms-widget-mdx/package.json
+++ b/packages/netlify-cms-widget-mdx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netlify-cms-widget-components",
+  "name": "netlify-cms-widget-mdx",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
