--- a/packages/netlify-cms-widget-mdx/package.json
+++ b/packages/netlify-cms-widget-mdx/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "react-sortable-hoc": "^0.8.3",
     "react-textarea-autosize": "^7.0.4",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "uuid-validate": "^0.0.3"
   },
   "devDependencies": {
     "babel-jest": "^23.4.0",
-    "jest-prop-type-error": "^1.1.0",
     "babel-preset-react": "^6.24.1",
     "braces": "^2.3.2",
     "enzyme": "^3.3.0",
@@ -18,6 +18,7 @@
     "findup-sync": "^2.0.0",
     "graphql-mock": "^1.0.3",
     "jest": "^23.4.1",
+    "jest-prop-type-error": "^1.1.0",
     "moxios": "^0.4.0",
     "prettier": "^1.12.0",
     "react-addons-test-utils": "^15.6.2",
